# basketball_reference_scraper

./: .gitignore  examples.py  pyproject.toml  setup.py
basketball_reference_scraper/: box_scores.py  drafts.py  injury_report.py  pbp.py  players.py  request_utils.py  seasons.py  teams.py  utils.py
test/: test_box_scores.py  test_teams.py
