[tool.poetry]
name = "basketball-reference-scraper"
version = "3.0.5"
description = ""
authors = [
    "Vishaal Agartha <vishaalagartha@gmail.com>",
    "Daryl Stronge <darylkstronge@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DSnoNintendo/basketball_reference_scraper"
keywords = [
        "nba",
        "wnba",
        "sports",
        "data mining",
        "basketball",
        "basketball reference",
        "basketball-reference.com",
]
packages = [{ include = "basketball_reference_scraper"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"
numpy = "^1.21.0"
pandas = "^2.2.3"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.2"
requests = "^2.32.3"
six = "^1.17.0"
soupsieve = "^2.6"
unidecode = "^1.3.8"
selenium = "^4.27.1"
html5lib = "^1.1"
black = "^24.10.0"
isort = "^5.13.2"
proxy-cycling-webdriver = { git = "https://github.com/DSnoNintendo/proxy-cycling-webdriver" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
